renamed css classes

--- a/src/components/Services/Service/Service.css
+++ b/src/components/Services/Service/Service.css
@@ -1,12 +1,12 @@
-.services h3 {
+.service h3 {
   color: rgb(50, 50, 50);
 }
 
-.services button {
+.service button {
   width: fit-content;
 }
 
-.services h3::before {
+.service h3::before {
   counter-increment: topic;
   content: counter(topic) ". ";
   color: rgb(13, 110, 253);
