--- a/src/components/DiscussedTopics/Topic/Topic.css
+++ b/src/components/DiscussedTopics/Topic/Topic.css
@@ -1,8 +1,8 @@
-.topics h3 {
+.topic h3 {
   color: rgb(50, 50, 50);
 }
 
-.topics h3::before {
+.topic h3::before {
   counter-increment: topic;
   content: counter(topic) ". ";
   color: rgb(13, 110, 253);
