--- a/src/components/DiscussedTopics/Topic/Topic.css
+++ b/src/components/DiscussedTopics/Topic/Topic.css
@@ -1,9 +1,14 @@
 .topic h3 {
   color: rgb(50, 50, 50);
+  counter-reset: topic;
 }
 
 .topic h3::before {
   counter-increment: topic;
   content: counter(topic) ". ";
   color: rgb(13, 110, 253);
+}
+
+.topic > div {
+  background-color: rgb(228, 228, 228);
 }
