changed bg position

--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,7 +1,7 @@
 .banner {
   color: white;
   background-image: url(../../images/michael-faraday.jpg);
-  background-position: 50% 50%;
+  background-position: top right;
   background-size: cover;
 }
 
